tv/threadfin-bis-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: threadfin-bis
  namespace: tv
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    flame.pawelmalak/type: app
    flame.pawelmalak/name: BlueTV Tuner
    flame.pawelmalak/url: https://threadfin-bis.mdapi.ch/web
    flame.pawelmalak/category: TV Sourcing
    flame.pawelmalak/icon: knob
    flame.pawelmalak/order: '40'
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-signin: https://auth.mdapi.ch/tv/oauth2/start?rd=https://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy-tv.oauth2-proxy.svc.cluster.local/oauth2/auth
spec:
  ingressClassName: nginx
  rules:
    - host: threadfin-bis.mdapi.ch
      http:
        paths:
          - backend:
              service:
                name: threadfin-bis
                port:
                  number: 34400
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - threadfin-bis.mdapi.ch
      secretName: threadfin-bis-cert
